# sdk-examples

./: .cursorrules  .gitignore  .pylintrc  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/workflows/: python-lint.yaml
agent/: requirements.txt  simple.py  tools.json
chatbot/: app.py  context.py  requirements.txt
docs/Getting Started/: Quick Start.md
python/agent/: app.py  requirements.txt
python/agent/crew-ai/: .env.example  README.md  pyproject.toml
python/agent/crew_ai/: .env.example  README.md  pyproject.toml
python/agent/crew_ai/src/: main.py  observability.py
python/agent/langchain-agent/: .env.example  main.py  requirements.txt
python/agent/langgraph-fsi-agent/: README.md
python/agent/langgraph-fsi-agent/after/: .env.example  .gitignore  README.md  app.py  dataset.json  pyproject.toml  test.py
python/agent/langgraph-fsi-agent/after/source-docs/credit-cards/: celestial-rewards-credit-card-overview.md  celestial-rewards-credit-card-rewards-summary.md  celestial-rewards-credit-card-terms-and-conditions.md  orbit-credit-card-faq.md  orbit-credit-card-overview.md
python/agent/langgraph-fsi-agent/after/src/galileo_langgraph_fsi_agent/agents/: __init__.py  credit_card_information_agent.py  credit_score_agent.py  supervisor_agent.py
python/agent/langgraph-fsi-agent/after/src/galileo_langgraph_fsi_agent/tools/: __init__.py  pinecone_retrieval_tool.py
python/agent/langgraph-fsi-agent/before/: .env.example  .gitignore  LICENSE  app.py  pyproject.toml
python/agent/langgraph-fsi-agent/before/.chainlit/: .langchain.db
python/agent/langgraph-fsi-agent/before/scripts/: setup_pinecone.py
python/agent/langgraph-fsi-agent/before/source-docs/credit-cards/: celestial-rewards-credit-card-overview.md  celestial-rewards-credit-card-terms-and-conditions.md  orbit-credit-card-terms-and-conditions.md
python/agent/langgraph-fsi-agent/before/src/galileo_langgraph_fsi_agent/agents/: __init__.py  credit_card_information_agent.py  credit_score_agent.py  supervisor_agent.py
python/agent/langgraph-fsi-agent/before/src/galileo_langgraph_fsi_agent/tools/: __init__.py  credit_score_tool.py  pinecone_retrieval_tool.py
python/agent/langgraph-otel/: .env.example  README.md  agent.py  main.py  pyproject.toml
python/agent/minimal-agent-example/: .env.example  app.py  minimal_agent.py
python/agent/startup-simulator-3000/: .example.env  README.md  TUTORIAL.md  __init__.py  agent.py  app.py  demo.py  requirements.txt  (+5 more)
python/chatbot/: app.py  context.py  hallucination.py  requirements.txt  test.py
python/dataset-experiments/: .env.template  app.py  experiment_compare_two_models.py  requirements.txt  sample_financial_transactions.jsonl  test_experiments.py
python/rag/: .env.example  README.md  app.py  requirements.txt  test.py
rag/: app.py  requirements.txt
scrap/: GalileoLogger_Documentation.md  simple-logger.py  simple-simulator.py  simple.py  tool-span-test.py
typescript/: galileo-1.4.0.tgz  galileo-sdk-documentation.md
typescript/agent/: package-lock.json  package.json  tools.json  tsconfig.json
typescript/chatbot/: .env.example  index.ts  package-lock.json  package.json
typescript/datasets-experiments/: index.ts  package.json  pnpm-lock.yaml
typescript/rag/: .env.example  README.md  app.ts  package-lock.json  package.json
(+210 files in other folders)
