[project]
name = "langgraph-otel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.6.0",
    "langgraph-prebuilt>=0.6.0",
    "openai",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.36.0",
    "opentelemetry-exporter-otlp-proto-http>=1.36.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "python-dotenv>=1.1.0",
    "openinference-instrumentation-openai>=0.1.32",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
]
